# ab-glm-abtest

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  codecov.yml  pyproject.toml  renovate.json
.github/workflows/: ci.yml  release.yml
docs/: api_reference.md  assumptions_limitations.md  ci_cd_guide.md  interpretation_guide.md  phase5_summary.md  phase6_summary.md  phase7_summary.md  project_summary.md  quick_reference.md  troubleshooting.md
examples/: README.md  analyze_experiment.py  sample_experiment_data.csv
notebooks/: 01_real_world_example.ipynb  02_logit_vs_probit_comparison.ipynb  03_power_analysis_sample_size.ipynb  04_statistical_robustness.ipynb  05_performance_scalability.ipynb  README.md
scripts/: run_demo.py
src/ab_glm/: __init__.py  causal_inference.py  enhanced_pipeline.py  optimization.py  parallel_processing.py  performance.py  pipeline.py  robustness_checks.py  scalable_processing.py  security.py  statistical_tests.py
tests/: test_performance_scalability.py  test_pipeline.py  test_security.py  test_statistical_robustness.py
