[tool.poetry]
name = "ab-glm-abtest"
version = "0.1.0"
description = "A/B testing with logit & probit GLMs: covariate-adjusted ATE/RR via marginal predictions, cluster-robust SEs, and Brier score."
authors = ["Diogo Ribeiro <diogoribeiro7@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ab_glm", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0"
pandas = "^2.2"
statsmodels = "^0.14.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.6.9"
mypy = "^1.11"
types-pytz = "^2025.1.0.0"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
exclude = [".venv", "build", "dist"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
