[tool.poetry]
name = "ab-glm-abtest"
version = "0.4.0"
description = "A/B testing with logit & probit GLMs: covariate-adjusted ATE/RR via marginal predictions, cluster-robust SEs, and Brier score."
authors = ["Diogo Ribeiro <diogoribeiro7@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ab_glm", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0"
pandas = "^2.2"
statsmodels = "^0.14.2"
tqdm = "^4.66"
psutil = "^5.9"
scipy = "^1.11"
scikit-learn = "^1.3"
joblib = "^1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^6.0"
pytest-watch = "^4.2"
pytest-xdist = "^3.5"
pytest-timeout = "^2.2"
ruff = "^0.14.2"
mypy = "^1.11"
types-pytz = "^2025.1.0.0"
pre-commit = "^3.6"
bandit = "^1.7"
safety = "^3.0"
black = "^24.0"
isort = "^7.0"
jupyter = "^1.0"
notebook = "^7.0"
ipykernel = "^6.28"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
exclude = [".venv", "build", "dist"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = """
    --cov=ab_glm
    --cov-report=term-missing
    --cov-report=html
    --cov-fail-under=80
"""
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/ab_glm"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
precision = 2
skip_empty = true
show_missing = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
