[tool.poetry]
name = "ab-glm-abtest"
version = "0.4.0"
description = "A/B testing with logit & probit GLMs: covariate-adjusted ATE/RR via marginal predictions, cluster-robust SEs, and Brier score."
authors = ["Diogo Ribeiro <diogoribeiro7@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ab_glm", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = ">=2.0,<3.0"
pandas = ">=2.2,<3.0"
statsmodels = ">=0.14.6,<1.0"
tqdm = ">=4.66,<5.0"
psutil = ">=5.9,<6.0"
scipy = ">=1.11,<2.0"
scikit-learn = ">=1.3,<2.0"
joblib = ">=1.3,<2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3,<9.0"
pytest-cov = ">=6.0,<7.0"
pytest-watch = ">=4.2,<5.0"
pytest-xdist = ">=3.5,<4.0"
pytest-timeout = ">=2.2,<3.0"
ruff = ">=0.14.2,<1.0"
mypy = ">=1.11,<2.0"
types-pytz = ">=2025.1.0.0,<2026.0.0.0"
pre-commit = ">=3.6,<4.0"
bandit = ">=1.7,<2.0"
safety = ">=3.0,<4.0"
black = ">=24.0,<25.0"
isort = ">=5.13,<6.0"
jupyter = ">=1.0,<2.0"
notebook = ">=7.0,<8.0"
ipykernel = ">=6.28,<7.0"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
exclude = [".venv", "build", "dist"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = """
    --cov=ab_glm
    --cov-report=term-missing
    --cov-report=html
    --cov-fail-under=80
"""
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/ab_glm"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
precision = 2
skip_empty = true
show_missing = true

[build-system]
requires = ["poetry-core>=1.9.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
